# tickets_hunter

./: .gitignore  CHANGELOG.md  pyproject.toml
build_scripts/: nodriver_tixcraft.spec
docs/02-development/: ticket_automation_standard.md
docs/03-mechanisms/: 11-queue-payment.md
src/: nodriver_common.py  nodriver_tixcraft.py  settings.py
src/www/: settings.html  settings.js
