[project]
name = "tickets-hunter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi==2026.1.4",
    "chardet==5.2.0",
    "cryptography==46.0.4",
    "ddddocr==1.5.6",
    "idna==3.11",
    "looseversion==1.3.0",
    "numpy==2.2.6",
    "onnxruntime==1.23.1",
    "opencv-python==4.12.0.88",
    "pillow==11.3.0",
    "playsound==1.2.2",
    "pyperclip==1.11.0",
    "requests==2.32.5",
    "tornado==6.5.4",
    "urllib3==2.6.3",
    "zendriver==0.15.3",
]
